bk_ida/gccida/g1/signed_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1935:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1950:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 10) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1950:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 10) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1952:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 9) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1952:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 9) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1954:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 8) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1954:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 8) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1956:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 7) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1956:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 7) == section_name ) 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1958:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 6) == section_name ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/c-common.c:1958:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 6) == section_name ) 
       ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/signed_type/src/obj/c-common.o] Error 1
